# lisp

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  default.nix  docker.sh  flake.nix  test.sh
.github/workflows/: test.yml
examples/: factorial.lisp
src/: env.cpp  env.hpp  errors.h  errors.hpp  hello.cpp  hello.h  lisp.hpp  main.cpp  parse.cpp  parse.hpp  primitives.h  symbol.h  types.h  value.h  values.cpp  values.hpp
tests/: CMakeLists.txt
tests/src/: test_lisp.cpp
